force-app/main/default/objects/Di_Idea_Internal_Comments__c/Di_Idea_Internal_Comments__c.object-meta.xml
<CustomObject>
    <label>Internal Comments</label>
    <nameField>
        <displayFormat>IdeaInternalComment-{0000}</displayFormat>
        <label>Internal Comments Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>