force-app/main/default/objects/Di_Idea_Internal_Comments__c/fields/Di_Idea_CommentBody__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_CommentBody__c</fullName>
    <label>Comment Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>