force-app/main/default/objects/Di_Idea_Internal_Comments__c/fields/Di_Idea_CommunityId__c.field-meta.xml
<CustomField>
    <fullName>Di_Idea_CommunityId__c</fullName>
    <label>Community Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>