force-app/main/default/objects/Di_Idea_Internal_Comments__c/fields/Product_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Product_Manager_Email__c</fullName>
    <label>Product Manager Email</label>
    <type>Email</type>
</CustomField>